--- a/customwebportal/webapp/view/App.view.xml
+++ b/customwebportal/webapp/view/App.view.xml
@@ -1,6 +1,45 @@
-<mvc:View controllerName="com.inctue.customwebportal.controller.App"
-    xmlns:mvc="sap.ui.core.mvc"
-    xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
+<mvc:View 
+    controllerName="com.inctue.customwebportal.controller.App"     
+    xmlns:mvc="sap.ui.core.mvc"     
+    xmlns="sap.m"     
+    xmlns:f="sap.f">
+    
+    <Page>
+        <customHeader>
+            <f:ShellBar
+                title="Web Portal"
+                homeIcon="./image/jng_logo.png"
+                showNotifications="false"
+                showProductSwitcher="false"
+                showSearch="true"
+                class="customShellBar">
+                
+                <!-- Search Bar in additional content -->
+                <!-- <f:additionalContent>
+                    <SearchField 
+                        id="globalSearchField"
+                        placeholder="Search across the portal..."
+                        width="350px"
+                        showSearchButton="true"
+                        class="customSearchField">
+                    </SearchField>
+                </f:additionalContent> -->
+                
+                <!-- Avatar in additional content with proper sizing -->
+                <f:additionalContent>
+                    <f:Avatar 
+                        id="userAvatar"
+                        initials="JD"
+                        displaySize="XS"
+                        backgroundColor="Accent1"
+                        press="onAvatarPress"
+                        tooltip="User Profile"
+                        class="customAvatar">
+                    </f:Avatar>
+                </f:additionalContent>
+                
+            </f:ShellBar>
+        </customHeader>
+        
     </Page>
 </mvc:View>
