Added Announcemnt panel footer

--- a/customwebportal/webapp/css/style.css
+++ b/customwebportal/webapp/css/style.css
@@ -1,9 +1,4 @@
-.customSection {
-    border: 1px solid #dcdcdc;
-    /* border-radius: 8px; */
-    background-color: #ffffff;
-    padding: 1rem;
-}
+
 /* 🔔 Global Announcement Bar */
 .customAnnouncementBar {
     background-color: #e74c3c; /* Red alert-style */
@@ -11,9 +6,6 @@
     font-weight: bold;
 }
 
-/* Footer */
-.customFooter {
-    background-color: #f4f4f4; /* Light gray */
-    border-top: 1px solid #ddd;
-    font-size: 0.875rem;
+.customGreyBackground {
+    background-color: #e5e5e5;
 }
